[gd_scene load_steps=5 format=3 uid="uid://bk15ap3u2cei8"]

[ext_resource type="Script" path="res://scripts/declare_window.gd" id="1_6dydo"]
[ext_resource type="Texture2D" uid="uid://c8663rmutrrw7" path="res://art/dev/box.png" id="2_3dobg"]
[ext_resource type="Theme" uid="uid://dss4hlpng3bfh" path="res://theme/default.tres" id="2_un7pd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ehn7p"]
bg_color = Color(0.49, 0.49, 0.49, 1)

[node name="DeclareWindow" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -178.0
offset_right = 240.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ehn7p")
script = ExtResource("1_6dydo")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_3dobg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_un7pd")
theme_override_font_sizes/font_size = 55
text = "I Have"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_un7pd")

[node name="DeclareLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Defuse Wire:"

[node name="NumberLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.92549, 0, 1)
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2

[node name="UpButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "^"

[node name="DownButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "v"

[node name="Spacer" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_un7pd")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/UpButton" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/DownButton" to="." method="_on_down_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
